fixed thumbnail overflow

--- a/public/stylesheets/resume-gallery.css
+++ b/public/stylesheets/resume-gallery.css
@@ -53,6 +53,7 @@ body {
 .thumb {
   height: 250px;
   padding-top: 15px;
+  overflow: hidden;
 }
 
 .header {
@@ -170,7 +171,7 @@ option {
 
 .thumb img{
   border-radius: 2px;
-  max-height: 24vh !important;
+  max-height: 220px !important;
   overflow: hidden;
 }
 
